[gd_scene load_steps=5 format=3 uid="uid://lhqp0caarqll"]

[ext_resource type="Script" path="res://scripts/battery/battery_main_container.gd" id="1_6afxl"]
[ext_resource type="PackedScene" uid="uid://dw0pabylvvle5" path="res://scenes/battery/battery.tscn" id="1_sf3u8"]

[sub_resource type="Shader" id="Shader_f2von"]
code = "shader_type canvas_item;

uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;
uniform float lod: hint_range(0.0, 5) = 0.0;
uniform float brightness_decrease: hint_range(0, 1.0) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color - vec4(brightness_decrease, brightness_decrease, brightness_decrease, 0.0);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3ysng"]
shader = SubResource("Shader_f2von")
shader_parameter/lod = 2.0
shader_parameter/brightness_decrease = 0.07

[node name="BatteryMainContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6afxl")

[node name="BlurredBG" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_3ysng")
offset_right = 1890.0
offset_bottom = 980.0
color = Color(0, 0, 0, 0)

[node name="Corner" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1560, 280)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -362.0
offset_top = 50.0
offset_right = 1198.0
offset_bottom = 330.0
grow_horizontal = 0
scale = Vector2(0.2, 0.2)
mouse_filter = 2

[node name="Battery" parent="Corner" groups=["battery"] instance=ExtResource("1_sf3u8")]
unique_name_in_owner = true
layout_mode = 2

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -945.0
offset_top = -490.0
offset_right = 945.0
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(1840, 50)
gizmo_extents = 50.0

[connection signal="battery_clicked" from="Corner/Battery" to="." method="_on_battery_clicked"]
